objects/Setup__c.object
<CustomObject>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <label>Instance URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>